<resources>
    <string name="app_name">Birder</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Search">Search</string>
    <string name="SearchInfo">Search birds from Wikipedia.</string>
    <string name="bird_specie">Bird Species</string>
    <string name="birdItem">Bird</string>
    <string name="birdImage">Picture of a bird</string>
    <string name="gallery">Gallery</string>
    <string name="galleryButton">Gallery button</string>
    <string name="camera">Camera</string>
    <string name="cameraButton">Camera button</string>
    <string name="name">Name</string>
    <string name="editName">Edit name</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="searchText">Search birds from Wikipedia</string>
    <string name="fabAddBird">Add a new bird</string>
    <string name="map">Map</string>
    <string name="update">Update</string>
    <string name="duck">Duck model</string>
    <string name="crow">Crow model</string>
    <string name="yellowbird">Yellow bird model</string>
    <string name="searchfromwiki">Search this bird from Wikipedia</string>
    <string name="delete">Delete</string>
    <string name="favorite">Favorite</string>
    <string name="search">Search</string>
    <string name="ar_camera">AR Camera</string>
    <string name="findings">Findings</string>
    <string name="notFound">Oops! Bird not found.</string>
    <string name="wikipedia">Wikipedia</string>
    <string name="AudioLogo">Audio logo</string>

</resources>